VB/Lib/xcgui.bas

Declare Function XAdapterTree_GetCountColumn Lib "xcgui.dll" (ByVal hAdapter As Long) As Long
Declare Function XAdapterTree_SetItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal iColumn As Long, ByVal pValue As String) As Boolean
Declare Function XAdapterTree_SetItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal pName As String, ByVal pValue As String) As Boolean
Declare Function XAdapterTree_SetItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal iColumn As Long, ByVal hImage As Long) As Boolean
Declare Function XAdapterTree_SetItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal pName As String, ByVal hImage As Long) As Boolean
Declare Function XAdapterTree_GetItemTextEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal pName As String, ByVal pOut As String, ByVal nOutLen As Long) As Boolean
Declare Function XAdapterTree_GetItemImageEx Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal nID As Long, ByVal pName As String) As Long
Declare Function XAdapterMap_Create Lib "xcgui.dll" () As Long
Declare Function XAdapterMap_AddItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal pValue As String) As Boolean
Declare Function XAdapterMap_AddItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal hImage As Long) As Boolean
Declare Function XAdapterMap_GetCount Lib "xcgui.dll" (ByVal hAdapter As Long) As Long
Declare Function XAdapterMap_GetItemText Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String, ByVal pOut As String, ByVal nOutLen As Long) As Boolean
Declare Function XAdapterMap_GetItemImage Lib "xcgui.dll" (ByVal hAdapter As Long, ByVal pName As String) As Long
Declare Function XDraw_Create Lib "xcgui.dll" (ByVal hdc As Long) As Long
Declare Sub XDraw_Destroy Lib "xcgui.dll" (ByVal hDraw As Long)
Declare Sub XDraw_SetOffset Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XDraw_GetOffset Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pX As Long, ByVal pY As Long)
Declare Sub XDraw_RestoreGDIOBJ Lib "xcgui.dll" (ByVal hDraw As Long)
Declare Function XDraw_GetHDC Lib "xcgui.dll" (ByVal hDraw As Long) As Long
Declare Sub XDraw_SetBrushColor Lib "xcgui.dll" (ByVal hDraw As Long, ByVal color As Long, ByVal alpha As Byte)
Declare Sub XDraw_SetTextAlign Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nFlag As Long)
Declare Sub XDraw_SetFontX Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hFontx As Long)
Declare Sub XDraw_SetFont Lib "xcgui.dll" (ByVal hDraw As Long, ByVal size As Long)
Declare Sub XDraw_SetFont2 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pName As String, ByVal size As Long)
Declare Sub XDraw_SetFont3 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pLogFont As LOGFONT)
Declare Function XDraw_SetBkMode Lib "xcgui.dll" (ByVal hDraw As Long, ByVal bTransparent As Boolean) As Long
Declare Function XDraw_CreateSolidBrush Lib "xcgui.dll" (ByVal hDraw As Long, ByVal crColor As Long) As Long
Declare Function XDraw_CreatePen Lib "xcgui.dll" (ByVal hDraw As Long, ByVal fnPenStyle As Long, ByVal nWidth As Long, ByVal crColor As Long) As Long
Declare Function XDraw_CreateRectRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nLeftRect As Long, ByVal nTopRect As Long, ByVal nRightRect As Long, ByVal nBottomRect As Long) As Long
Declare Function XDraw_CreateRoundRectRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nLeftRect As Long, ByVal nTopRect As Long, ByVal nRightRect As Long, ByVal nBottomRect As Long, ByVal nWidthEllipse As Long, ByVal nHeightEllipse As Long) As Long
Declare Function XDraw_CreatePolygonRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pPt As Point, ByVal cPoints As Long, ByVal fnPolyFillMode As Long) As Long
Declare Function XDraw_SelectClipRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hrgn As Long) As Long
Declare Sub XDraw_FillRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect)
Declare Sub XDraw_FillRectColor Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect, ByVal color As Long, ByVal alpha As Byte)
Declare Function XDraw_FillRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hrgn As Long, ByVal hbr As Long) As Boolean
Declare Sub XDraw_FillEllipse Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect)
Declare Sub XDraw_DrawEllipse Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect)
Declare Sub XDraw_FillRoundRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect, ByVal nWidth As Long, ByVal nHeight As Long)
Declare Sub XDraw_DrawRoundRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect, ByVal nWidth As Long, ByVal nHeight As Long)
Declare Function XDraw_Rectangle Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nLeftRect As Long, ByVal nTopRect As Long, ByVal nRightRect As Long, ByVal nBottomRect As Long) As Boolean
Declare Sub XDraw_DrawGroupBox_Rect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect, ByVal pName As String, ByVal textColor As Long, ByVal textAlpha As Byte, ByVal pOffset As Point)
Declare Sub XDraw_DrawGroupBox_RoundRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect, ByVal pName As String, ByVal textColor As Long, ByVal textAlpha As Byte, ByVal pOffset As Point, ByVal nWidth As Long, ByVal nHeight As Long)
Declare Sub XDraw_GradientFill2 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal color1 As Long, ByVal alpha1 As Byte, ByVal color2 As Long, ByVal alpha2 As Byte, ByVal pRect As rect, ByVal mode As Long)
Declare Function XDraw_GradientFill4 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal color1 As Long, ByVal color2 As Long, ByVal color3 As Long, ByVal color4 As Long, ByVal pRect As rect, ByVal mode As Long) As Boolean
Declare Function XDraw_FrameRgn Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hrgn As Long, ByVal hbr As Long, ByVal nWidth As Long, ByVal nHeight As Long) As Boolean
Declare Sub XDraw_FrameRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect)
Declare Sub XDraw_FocusRect Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pRect As rect)
Declare Sub XDraw_DrawLine Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x1 As Long, ByVal y1 As Long, ByVal x2 As Long, ByVal y2 As Long)
Declare Function XDraw_MoveToEx Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x As Long, ByVal y As Long, ByVal lpPoint As Point) As Boolean
Declare Function XDraw_LineTo Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nXEnd As Long, ByVal nYEnd As Long) As Boolean
Declare Function XDraw_Polyline Lib "xcgui.dll" (ByVal hDraw As Long, ByVal pArrayPt As Point, ByVal arrayPtSize As Long) As Boolean
Declare Sub XDraw_Dottedline Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x1 As Long, ByVal y1 As Long, ByVal x2 As Long, ByVal y2 As Long)
Declare Function XDraw_SetPixel Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x As Long, ByVal y As Long, ByVal crColor As Long) As Long
Declare Sub XDraw_Check Lib "xcgui.dll" (ByVal hDraw As Long, ByVal x As Long, ByVal y As Long, ByVal color As Long, ByVal bCheck As Boolean)
Declare Function XDraw_DrawIconEx Lib "xcgui.dll" (ByVal hDraw As Long, ByVal xLeft As Long, ByVal yTop As Long, ByVal hIcon As Long, ByVal cxWidth As Long, ByVal cyWidth As Long, ByVal istepIfAniCur As Long, ByVal hbrFlickerFreeDraw As Long, ByVal diFlags As Long) As Boolean
Declare Function XDraw_BitBlt Lib "xcgui.dll" (ByVal hDrawDest As Long, ByVal nXDest As Long, ByVal nYDest As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hdcSrc As Long, ByVal nXSrc As Long, ByVal nYSrc As Long, ByVal dwRop As Long) As Boolean
Declare Function XDraw_BitBlt2 Lib "xcgui.dll" (ByVal hDrawDest As Long, ByVal nXDest As Long, ByVal nYDest As Long, ByVal nWidth As Long, ByVal nHeight As Long, ByVal hDrawSrc As Long, ByVal nXSrc As Long, ByVal nYSrc As Long, ByVal dwRop As Long) As Boolean
Declare Function XDraw_AlphaBlend Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nXOriginDest As Long, ByVal nYOriginDest As Long, ByVal nWidthDest As Long, ByVal nHeightDest As Long, ByVal hdcSrc As Long, ByVal nXOriginSrc As Long, ByVal nYOriginSrc As Long, ByVal nWidthSrc As Long, ByVal nHeightSrc As Long, ByVal alpha As Long) As Boolean
Declare Sub XDraw_TriangularArrow Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hBrush As Long, ByVal align As Long, ByVal x As Long, ByVal y As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XDraw_Image Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal x As Long, ByVal y As Long)
Declare Sub XDraw_Image2 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal x As Long, ByVal y As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XDraw_ImageStretch Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal x As Long, ByVal y As Long, ByVal width As Long, ByVal height As Long)
Declare Sub XDraw_ImageAdaptive Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal pRect As rect)
Declare Sub XDraw_ImageExTile Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal pRect As rect, ByVal flag As Long)
Declare Sub XDraw_ImageSuper Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal pRect As rect, ByVal bClip As Boolean)
Declare Sub XDraw_ImageSuper2 Lib "xcgui.dll" (ByVal hDraw As Long, ByVal hImage As Long, ByVal pRcDest As rect, ByVal pSrcRect As rect)
Declare Sub XDraw_DrawText Lib "xcgui.dll" (ByVal hDraw As Long, ByVal lpString As String, ByVal nCount As Long, ByVal lpRect As rect)
Declare Sub XDraw_DrawTextUnderline Lib "xcgui.dll" (ByVal hDraw As Long, ByVal lpString As String, ByVal nCount As Long, ByVal lpRect As rect, ByVal colorLine As Long, ByVal alphaLine As Byte)
Declare Sub XDraw_TextOut Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nXStart As Long, ByVal nYStart As Long, ByVal lpString As String, ByVal cbString As Long)
Declare Sub XDraw_TextOutA Lib "xcgui.dll" (ByVal hDraw As Long, ByVal nXStart As Long, ByVal nYStart As Long, ByVal lpString As String)
Declare Sub XDraw_SetAlpha Lib "xcgui.dll" (ByVal hDraw As Long, ByVal alpha As Byte)
Declare Sub XDraw_SetAlphaEx Lib "xcgui.dll" (ByVal hdc As Long, ByVal alpha As Byte)
Declare Function XEle_Create Lib "xcgui.dll" (ByVal x As Long, ByVal y As Long, ByVal cx As Long, ByVal cy As Long, ByVal hParent As Long) As Long
Declare Sub XEle_RegEventEx Lib "xcgui.dll" (ByVal hEle As Long, ByVal pEvent As Long)
Declare Function XEle_RemoveEventEx Lib "xcgui.dll" (ByVal hEle As Long, ByVal pEvent As Long) As Boolean
Declare Sub XEle_RegEventC Lib "xcgui.dll" (ByVal hEle As Long, ByVal nEvent As Long, ByVal pFun As Long)
Declare Sub XEle_RegEventC1 Lib "xcgui.dll" (ByVal hEle As Long, ByVal nEvent As Long, ByVal pFun As Long)
Declare Sub XEle_RegEventC2 Lib "xcgui.dll" (ByVal hEle As Long, ByVal nEvent As Long, ByVal pFun As Long)
Declare Function XEle_RemoveEventC Lib "xcgui.dll" (ByVal hEle As Long, ByVal nEvent As Long, ByVal pFun As Long) As Boolean
Declare Function XEle_SendEvent Lib "xcgui.dll" (ByVal hEle As Long, ByVal hEventEle As Long, ByVal nEvent As Long, ByVal wParam As Long, ByVal lParam As Long) As Long
Declare Function XEle_PostEvent Lib "xcgui.dll" (ByVal hEle As Long, ByVal hEventEle As Long, ByVal nEvent As Long, ByVal wParam As Long, ByVal lParam As Long) As Boolean
Declare Function XEle_IsShow Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsEnable Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsEnableFocus Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsDrawFocus Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsBorder Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsEnableEvent_XE_PAINT_END Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsMouseThrough Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Function XEle_IsBkTransparent Lib "xcgui.dll" (ByVal hEle As Long) As Boolean
Declare Sub XEle_Enable Lib "xcgui.dll" (ByVal hEle As Long, ByVal bEnable As Boolean)
